<resources>
    <!--<string name="app_name">PSNine</string>-->

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_topic">TopicActivity</string>

    <!--http error code-->
    <string name="http_code_bad_request">400 Bad Request</string>
    <string name="http_code_unauthorized">401 Unauthorized</string>
    <string name="http_code_payment_required">402 Payment Required</string>
    <string name="http_code_forbidden">403 Forbidden</string>
    <string name="http_code_not_found">404 Not Found</string>
    <string name="http_code_method_not_allowed">405 Method Not Allowed</string>
    <string name="http_code_not_acceptable">406 Not Acceptable</string>
    <string name="http_code_internal_server_error">500 Internal Server Error</string>
    <string name="http_code_not_implemented">501 Not Implemented</string>
    <string name="http_code_bad_gateway">502 Bad Gateway</string>
    <string name="http_code_service_unavailable">503 Service Unavailable</string>
    <string name="http_code_gateway_timeout">504 Gateway Timeout</string>
    <string name="http_code_unknown_error">Unknown Error Code</string>

    <string name="username_hint">PSN ID (不是本站邮箱)</string>
    <string name="password_hint">密码</string>

    <!--nav texts-->
    <string name="nav_personal_header">个人</string>
    <string name="nav_index">主页</string>
    <string name="nav_login">登陆</string>
    <string name="nav_logout">登出</string>
    <string name="nav_personal">个人中心</string>
    <string name="nav_notice">短消息</string>
    <string name="nav_photo">图库</string>
    <string name="nav_element">元素</string>
    <string name="nav_fav">收藏</string>
    <string name="nav_more_header">更多</string>
    <string name="nav_setting">设置</string>
    <string name="nav_about">关于</string>
    <string name="nav_cache">缓存</string>

    <!--action name-->
    <string name="option">选项</string>
    <string name="error">错误</string>
    <string name="success">成功</string>
    <string name="save">保存</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="send">发送</string>
    <string name="submit">提交</string>
    <string name="local_upload">本地上传</string>
    <string name="take_photo_and_upload">照相</string>
    <string name="search">搜索</string>
    <string name="share">分享</string>
    <string name="loading">加载中</string>

    <!--message-->
    <string name="permissionDenied">权限申请被拒绝</string>
    <string name="view_original_image">查看原始图片</string>
    <string name="no_more_comments">没有更多的评论了.</string>
    <string name="ask_to_logout">确定要登出么?</string>
    <string name="ask_to_clean_cache">确定要清理缓存么?</string>
    <string name="ask_to_clean_cache_message">清理缓存可以获得更多的储存空间, 但下次加载时消耗的流量更多.</string>
    <string name="already_is_large_image">已经是大图了</string>
    <string name="not_log_in">未登陆</string>
    <string name="no_internet">无网络连接</string>
    <string name="not_support">暂不支持</string>
    <string name="new_reply">有新回复</string>
    <string name="sending">提交中…</string>
    <string name="originalUrl">出处</string>

    <!--hint-->
    <string name="gene_video_hint">视频地址，选填，目前仅支持 youku 和 bilibili</string>
    <string name="gene_url_hint">出处，选填，http 开头哦</string>
    <string name="already_selected">已选图片:</string>
    <string name="click_to_pick">点我选择图片</string>
    <string name="gene_ele_hint">元素，选填，只能由「中文字母数字」组成，2~15 个字符</string>
    <string name="gene_main_hint">请说说你对这些图/音乐/视频/电影的感受和看法，不要超过 600 字哦</string>
    <string name="topic_title">标题</string>
    <string name="topic_use_magic">使用魔法</string>
    <string name="topic_content">内容</string>

    <string name="floatingFabBehaviour" translatable="false">club.ranleng.psnine.view.FloatingFabBehaviour</string>
    <string name="authProvider" translatable="false">club.ranleng.psnine.provider</string>
    <string name="ActivityAnimationDuration" translatable="false">500</string>

</resources>
